2002-01-28  Richard Hestilow <hestilow@ximian.com>

	* po/POTFILES.in: Remove panel.desktop.in.in.

2002-01-28  Seth Nickell  <snickell@stanford.edu>

	* control-center/capplet-dir.c: (capplet_new), (capplet_dir_new),
	(capplet_dir_entry_destroy), (read_entries),
	(get_root_capplet_dir):
	* control-center/capplet-dir.h:

	Read control center directory structure out of GnomeVFS instead of
	directly off the disk.

	Also deal with pixmaps more uniformly, and properly load them
	out of PREFIX/share/pixmaps when they aren't an absolute path.
	
	* capplets/desktop-links/Sawfish/appearance-properties.desktop.in:
	* capplets/desktop-links/Sawfish/bindings-properties.desktop.in:
	* capplets/desktop-links/Sawfish/focus-properties.desktop.in:
	* capplets/desktop-links/Sawfish/match-properties.desktop.in:
	* capplets/desktop-links/Sawfish/maximize-properties.desktop.in:
	* capplets/desktop-links/Sawfish/meta-properties.desktop.in:
	* capplets/desktop-links/Sawfish/misc-properties.desktop.in:
	* capplets/desktop-links/Sawfish/move-properties.desktop.in:
	* capplets/desktop-links/Sawfish/placement-properties.desktop.in:
	* capplets/desktop-links/Sawfish/sound-properties.desktop.in:
	* capplets/desktop-links/Sawfish/workspace-properties.desktop.in:
	* capplets/ui-properties/behavior.desktop.in.in:

	Add a Categories Field.

	* capplets/desktop-links/Makefile.am:
	* capplets/desktop-links/Sawfish/Makefile.am:
	* capplets/file-types/Makefile.am:
	* capplets/theme-switcher/Makefile.am:
	* capplets/ui-properties/Makefile.am:
	* control-center/Gnome.directory.in.in:
	* control-center/Makefile.am:

	Install directory files into PREFIX/share/gnome/vfolders, the standard
	vfolder description location.
	
2002-01-28  Richard Hestilow <hestilow@ximian.com>

	* configure.in: Bump version to 1.99.2.

	* RELEASE: 1.99.2

2002-01-28  Laszlo Peter  <laca@ireland.sun.com>

	* archiver/location.c: s/__FUNCTION__/G_GNUC_FUNCTION/
	* capplets/common/capplet-util.c: ditto