@@ -26,7 +26,7 @@ fi
 changequote([,])dnl
 
 # Internationalization support
-GETTEXT_PACKAGE=control-center
+GETTEXT_PACKAGE=control-center-2.0
 AC_SUBST(GETTEXT_PACKAGE)
 
 ALL_LINGUAS="az ca cs da de el en_GB es et fi fr ga gl hr hu it ja ko lt lv ms nl nn no pl pt pt_BR ro ru sk sl sv tr uk wa zh_CN zh_TW"
