@@ -1,3 +1,11 @@
+2002-02-05  jacob berkman  <jacob@ximian.com>
+
+	* configure.in (GETTEXT_PACKAGE): change to be parallel
+	installable
+
+	* control-center2.png:
+	* Makefile.am (pixmap_DATA): rename to be parallel installable
+
 2002-01-28  Richard Hestilow <hestilow@ximian.com>
 
 	* po/POTFILES.in: Remove panel.desktop.in.in.
